# vycor-cpp

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  COMPATIBILITY.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
.github/workflows/scripts/: update-tap-formula.sh
docs/: EXTENDING.md  callgraph-mcp-review.md  design-f12-subprocess-workers.md  design-f8-usr-identity.md  mcp-usage.md  toolchain-portability.md
docs/checks/: README.md  adl-visibility.md  coverage-properties.md  ctad-visibility.md  dead-code.md  default-arg-divergence.md  exception-escape.md  odr-violations.md  specialization-visibility.md  static-init-hazards.md  static-init-order.md
examples/adl_fallback/: Core.hpp  Extension.hpp  Logic.hpp  order_a.cpp  order_b.cpp
examples/adl_same_score/: Core.hpp  Extension.hpp  order_a.cpp  order_b.cpp
examples/builder_to_struct/: expected.cpp  input.cpp
examples/ctad_fallback/: Container.hpp  Factory.hpp  Guide.hpp  order_a.cpp  order_b.cpp
examples/dead_code/: api.cpp  api.hpp  callbacks.cpp  callbacks.hpp  internal.cpp  internal.hpp  main.cpp  shapes.cpp  shapes.hpp
examples/deep_chains/: README.md  async_workers.cpp  async_workers.hpp  callbacks.cpp  callbacks.hpp  lambda_callbacks.cpp  lambda_callbacks.hpp  main.cpp  pipeline.cpp  pipeline.hpp  plugins.cpp  plugins.hpp  scheduler.cpp  scheduler.hpp  stage1_ingest.cpp  stage1_ingest.hpp  stage2_parse.cpp  stage2_parse.hpp  stage3_transform.cpp  stage3_transform.hpp  stage4_dispatch.cpp  stage4_dispatch.hpp  stage5_sink.cpp  stage5_sink.hpp  tokenizer.cpp  tokenizer.hpp  workers.cpp  workers.hpp
examples/exception_context/: main.cpp
examples/macro_split/: expected.cpp  input.cpp
examples/precision/: README.md  macro_sites.cpp  overloads.cpp  overloads.hpp  templates.cpp  templates.hpp
ext/: README.md
ext/examples/: ExampleOrgExtension.cpp  vycor.org.json
include/giga_drill/callgraph/: ControlFlowIndex.h
include/giga_drill/mcp/: McpServer.h
include/vycor/: Version.h.in
include/vycor/anneal/: Analyzer.h  CheckSet.h  Checkpoint.h  DeadCodeAnalyzer.h  GlobalIndex.h  Indexer.h  TypeNormalize.h
include/vycor/callgraph/: BuildStats.h  CallGraph.h  CallGraphBuilder.h  ChannelIndex.h  CollapseFilter.h  ConditionalGuard.h  ControlFlowIndex.h  ControlFlowOracle.h  Snapshot.h  StringInterner.h  UsrIdent.h  WorkerPool.h
include/vycor/compat/: ClangVersion.h  PchCache.h  ToolAdjusters.h
include/vycor/ext/: Extensions.h  OrgConfig.h
include/vycor/mcp/: McpProtocol.h  McpServer.h  McpTools.h
include/vycor/morph/: MatcherEngine.h  RulesParser.h  TemplateEngine.h  TransformPipeline.h
scripts/: bench.py  mcp-smoke.py  morph-batch.sh
src/: CMakeLists.txt  main.cpp
src/anneal/: Analyzer.cpp  CheckSet.cpp  Checkpoint.cpp  DeadCodeAnalyzer.cpp  GlobalIndex.cpp  Indexer.cpp
src/callgraph/: CallGraph.cpp  CallGraphBuilder.cpp  ChannelIndex.cpp  CollapseFilter.cpp  ControlFlowContextVisitor.cpp  ControlFlowIndex.cpp  ControlFlowOracle.cpp  Snapshot.cpp  WorkerPool.cpp
src/compat/: PchCache.cpp
src/ext/: Extensions.cpp  OrgConfig.cpp
src/mcp/: McpProtocol.cpp  McpServer.cpp  McpTools.cpp
src/morph/: MatcherEngine.cpp  RulesParser.cpp  TemplateEngine.cpp  TransformPipeline.cpp
tests/: CMakeLists.txt  test_adl_ctad.cpp  test_anneal_checkpoint.cpp  test_anneal_default_args.cpp  test_anneal_exception_escape.cpp  test_anneal_odr.cpp  test_anneal_specialization.cpp  test_anneal_static_init.cpp  test_channel_index.cpp  test_check_set.cpp  test_concurrency_index.cpp  test_control_flow.cpp  test_coverage_diag.cpp  test_dead_code.cpp  test_deep_chains.cpp  test_deferred_edges.cpp  test_disambiguation.cpp  test_extensions.cpp  test_matcher_engine.cpp  test_mcp.cpp  test_precision_identity.cpp  test_rules_parser.cpp  test_snapshot.cpp  test_transforms.cpp  test_worker_pool.cpp
